rspec-tools/tests/resources/invalid-rules/S101/python/rule.adoc
=== How to fix it in Flask
